1.add update todo 2.fix bug 3.add delete sure dialog 4.update apk

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".activity.RegisterActivity"
             android:launchMode="singleTask"/>
         <activity android:name=".activity.AddTodoActivity" />
+        <activity android:name=".activity.EditTodoActivity" />
     </application>
 
 </manifest>
