--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+#配置接口环境-正式环境
+FORMAL_BASE_URL = "http://www.wanandroid.com"
+
+#配置接口环境-测试环境
+TEST_BASE_URL = "http://www.wanandroid.com"
